objects/Seat__c/Seat__c.object-meta.xml
<CustomObject>
    <description>Object to store information related to car seats.</description>
    <label>Seat</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Seat Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>