objects/Seat__c/fields/Cannot_be_turned__c.field-meta.xml
<CustomField>
    <fullName>Cannot_be_turned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the seat can be turned or not.</description>
    <inlineHelpText>This field indicates whether the seat can be turned or not.</inlineHelpText>
    <label>Cannot be turned</label>
    <type>Checkbox</type>
</CustomField>