objects/Seat__c/fields/Exit_Row__c.field-meta.xml
<CustomField>
    <fullName>Exit_Row__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the seat is next to an exit row.</description>
    <inlineHelpText>This field indicates if the seat is next to an exit row.</inlineHelpText>
    <label>Exit Row</label>
    <type>Checkbox</type>
</CustomField>