objects/Seat__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It indicates whether the seat can be used or nor for functioning reasons.</description>
    <inlineHelpText>It indicates whether the seat can be used or nor for functioning reasons.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>