objects/Seat__c/fields/Less_Desirable__c.field-meta.xml
<CustomField>
    <fullName>Less_Desirable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Less Desirable</label>
    <type>Checkbox</type>
</CustomField>