objects/Seat__c/fields/Mobility_Approved__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobility Approved</label>
    <type>Checkbox</type>
</CustomField>