objects/Seat__c/fields/Seat_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Seat_Ticket__c</fullName>
    <description>Combination of Seat Number and Seat Letter</description>
    <formula>TEXT(Row_Number__c) &amp;  TEXT(Seat_Letter__c)</formula>
    <inlineHelpText>Combination of Seat Number and Seat Letter</inlineHelpText>
    <label>Seat Ticket</label>
    <type>Text</type>
</CustomField>